# Potions

./: .gitignore  CMakeLists.txt  Calcite_Kinetic_results.txt  Calcite_results.txt  Carbonate_20231124_123605_results.csv  README.md  debug_output.txt
docs/: .~lock.BioRT_Lib_Report.odt#  BioRT_Lib_Report.odt
docs/BioRTPlusPlus/: Doxyfile
docs/BioRTPlusPlus/latex/: annotated.tex  class_chem_file.tex  class_database.tex  class_run_options.tex  files.tex  model__inputs_8hpp.tex  refman.aux  refman.idx  refman.ilg  refman.toc  solution_8hpp.tex  struct_kinetic_constants.tex  struct_mineral_species.tex  struct_total_constants.tex  utils_8hpp.tex
docs/doxygen/latex/: class_model_inputs.tex  class_not_implemented.tex  class_not_implemented__coll__graph.md5  constants_8hpp.tex  constants_8hpp__dep__incl.md5  equilibrium_8hpp.tex  equilibrium_8hpp__dep__incl.md5  equilibrium_8hpp__incl.md5  hierarchy.tex  kinetic_8hpp.tex  kinetic_8hpp__dep__incl.md5  kinetic_8hpp__incl.md5  model__inputs_8hpp__dep__incl.md5  model__inputs_8hpp__incl.md5  potions__input_8hpp.tex  potions__input_8hpp__dep__incl.md5  potions__input_8hpp__incl.md5  refman.ind  refman.tex  solution_8hpp__dep__incl.md5  solution_8hpp__incl.md5  struct_chemical_state.tex  struct_chemical_state__coll__graph.md5  struct_equilibrium_constants.tex  struct_equilibrium_constants__coll__graph.md5  struct_kinetic_constants__coll__graph.md5  struct_mineral_species__coll__graph.md5  struct_secondary_species.tex  struct_secondary_species__coll__graph.md5  struct_total_constants__coll__graph.md5  utils_8hpp__dep__incl.md5  utils_8hpp__incl.md5
docs/ode/: Doxyfile
docs/ode/latex/: files.tex  ode_8hpp.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
docs/optimization/: Doxyfile
docs/optimization/latex/: files.tex  optimization_8hpp.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
include/: constants.hpp  equilibrium.hpp  kinetic.hpp  model_inputs.hpp  potions.hpp  potions_input.hpp  potions_utils.hpp  solution.hpp  utils.hpp
input/Calcite/: chem.yaml
input/Calcite_Kinetic/: cdbs.yaml  chem.yaml
input/Carbonate/: cdbs.yaml  chem.yaml
inputs/Calcite/: chem.yaml
my_libs/ode/: CMakeLists.txt
my_libs/ode/include/: ode.hpp
my_libs/ode/src/: explicit.cpp  implicit.cpp  solve_ode.cpp
my_libs/optimization/: CMakeLists.txt
my_libs/optimization/include/: optimization.hpp
my_libs/optimization/src/: jacobian.cpp  root.cpp
notebooks/: equilibrium.ipynb  kinetic.ipynb  octave-workspace
src/: CMakeLists.txt  chemfile.cpp  database.cpp  equilibrium.cpp  kinetic.cpp  main.cpp  model_inputs.cpp  run_options.cpp  solution.cpp  utils.cpp
tests/: CMakeLists.txt  test_inputs.cpp  test_optimization.cpp
